--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,8 +29,8 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.metrics }}
-          
+          token: ${{ secrets.SECRET_METRICS }}
+
           # Options
           user: lambdalisue
           template: classic
