--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -34,8 +34,8 @@ jobs:
           # Options
           user: IMpcuong
           template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: Asia/Tokyo
+          base: header, activity, repositories, metadata
+          config_timezone: Asia/Bangkok
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
@@ -61,7 +61,7 @@ jobs:
           plugin_people_types: followers, following
           plugin_projects: yes
           plugin_projects_limit: 4
-          plugin_support: yes
+          plugin_support: no
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
